@@ -5,6 +5,8 @@ Panelizer 8.x-3.x-dev, xxxx-xx-xx
 #2664574 by artreaktor, phenaproxima, hctom, jiff, floretan: Add support for
   Taxonomy Term entities.
 #2835590 by DamienMcKenna: Hide the custom Panelizer field, it's no longer used.
+#2800991 by garethhallnz: Allow other modules to change the view_mode being
+  rendered.
 
 
 Panelizer 8.x-3.0-alpha3, 2016-12-15
